# Vulkan-Engine

./: .gitmodules  CMakeLists.txt  Defines.hpp  InputSystem.hpp  README.md  VulkanCore.cpp  VulkanCore.hpp  main.cpp  test.cpp  window.cpp  window.hpp
common/: Defines.hpp  ShaderStructs.hpp
core/: Buffer.cpp  Buffer.hpp  BufferPool.cpp  BufferPool.hpp  CMakeLists.txt  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Fence.cpp  Fence.hpp  ImageView.cpp  ImageView.hpp  Renderable.hpp  Resource.cpp  Resource.hpp  SceneBuffer.cpp  SceneBuffer.hpp  ShaderModule.cpp
old_core/: BufferPool.cpp  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  Image.cpp  Image.hpp  Resource.cpp  Resource.hpp  SceneBuffer.cpp  SceneBuffer.hpp  ShaderModule.hpp
old_core/Test/: old_StagingBuffer.cpp  old_StagingBuffer.hpp
old_core/VulkanWrapper/: Buffer.cpp  Buffer.hpp  Resource.hpp
old_core/buffer/: BufferCommon.hpp  BufferModel.cpp  BufferModel.hpp
shaders/: compact-bindless.comp  compact-draws.comp  compact.comp  compile.sh  cull.comp  reset.comp  shader.frag  shader.vert
shaders/spirv/: compact-bindless-comp.spv  compact-comp.spv  compact-draws-comp.spv  cull-comp.spv  reset-comp.spv  shader-frag.spv  shader-vert.spv
src/: CMakeLists.txt  Loader.cpp  Loader.hpp  RenderPlan.cpp  RenderPlan.hpp  TextureLoader.cpp  TextureLoader.hpp  VulkanCore.cpp  imgui.ini  main.cpp
src/common/: ShaderStructs.hpp
src/core/: Attachment.cpp  Attachment.hpp  BufferPool.cpp  BufferPool.hpp  CMakeLists.txt  GenericBuffer.cpp  GenericBuffer.hpp  HostBuffer.cpp  HostBuffer.hpp  PersistentDeviceBuffer.cpp  PersistentDeviceBuffer.hpp  PersistentStagingBuffer.cpp  PersistentStagingBuffer.hpp  SceneBuffer.cpp  SceneBuffer.hpp  StagingBuffer.cpp  StagingBuffer.hpp  Texture.cpp  Texture.hpp  TextureList.cpp  TextureList.hpp
src/debug-utils/: CMakeLists.txt  DebugUtilsEXT.cpp  DebugUtilsEXT.hpp
src/vulkanwrapper/: Buffer.cpp  Buffer.hpp  Buffer_Old.cpp  Buffer_Old.hpp  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DeviceMemory.cpp  DeviceMemory.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  Generic.cpp  Generic.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  RenderPass.cpp  RenderPass.hpp  Resource.cpp  Resource.hpp  Sampler.cpp  Sampler.hpp  ShaderModule.cpp  ShaderModule.hpp
test/: Material.json  RenderPlan.cpp  RenderPlan.hpp  Renderer.cpp  Tile.cpp  demo.cpp  main.cpp  test.cpp
textures/: a.ktx  awesomeface.ktx  container.ktx  container.ppm
